--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,7 +17,7 @@
       window.heynote = Heynote;
     </script>
     <script type="module" src="main.js"></script>
-    <script src="./math.js"></script>
+    <script src="/math.js"></script>
   </body>
 </html>
 
